--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>{{ title }}</h1>
-  <div *ngIf="list === true && addButton === true">
+  <div *ngIf="list && addButton">
     <app-keg [childKegList]="masterKegList" (clickSender)="edit($event); add()"></app-keg>
   </div>
   <div *ngIf="selectedKeg">
     <app-edit-info [childSelectedKeg]="selectedKeg" (clickedDone)="finished()"></app-edit-info>
   </div>
-  <div *ngIf="newBeer === false && !selectedKeg">
+  <div *ngIf="!newBeer && !selectedKeg">
     <app-add-keg [childAddKegList]="masterKegList" (clickAdd)="add(); finished()"></app-add-keg>
   </div>
 </div>
